# at-tec-system

./: .gitignore  README.md  makefile
AT_EDUCATION/: README.md  pyproject.toml
AT_EDUCATION/src/delivery/: __init__.py  response.py
AT_EDUCATION/src/delivery/simulation/: worker.py
AT_EDUCATION/src/delivery/simulation/models/: function.py  resource.py  responses.py  template.py
AT_EDUCATION/src/repository/: __init__.py
AT_EDUCATION/src/schema/: __init__.py
AT_EDUCATION/src/service/: __init__.py
AT_MESSAGE_BROKER/: docker-compose.yml  makefile  pyproject.toml
AT_MESSAGE_BROKER/at_message_broker/: main.py
AT_SIMULATION/: alembic_create_revision.sh  alembic_downgrade_head.sh  makefile
AT_SIMULATION/docker/at_simulation_local/: docker-compose.yml
AT_USER/: alembic_create_revision.sh  alembic_downgrade_head.sh  alembic_upgrade_head.sh  makefile
AT_USER/docker/at_user_local/: docker-compose.yml
AT_USER/src/alembic/versions/: a8f9d3c124ec_init.py
