[tool.poetry]
name = "at-education"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
